# AI-Compliance-Copilot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  check_weaviate.py  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
src/: main.py
src/api/v1/: endpoints.py
src/core/: config.py
src/models/: api.py
src/scripts/: evaluate.py
src/services/: ingestion_service.py  pii_service.py  rag_service.py
tests/: test_pii_service.py  test_rag_service.py
weaviate_data/: schema.db  tx.db
weaviate_data/compliancedocument/ee7LrUZ83iIC/: proplengths
weaviate_data/compliancedocument/ee7LrUZ83iIC/lsm/objects/: segment-1755202829119365673.bloom  segment-1755202829119365673.db  segment-1755202829119365673.secondary.0.bloom
weaviate_data/compliancedocument/ee7LrUZ83iIC/lsm/property__id/: segment-1755202829124927965.bloom  segment-1755202829124927965.db
weaviate_data/compliancedocument/ee7LrUZ83iIC/lsm/property_content/: segment-1755202829123885048.db
weaviate_data/compliancedocument/ee7LrUZ83iIC/lsm/property_content_searchable/: segment-1755202829125699631.bloom  segment-1755202829125699631.db
weaviate_data/compliancedocument/ee7LrUZ83iIC/lsm/property_page_number/: segment-1755202829123865131.db
weaviate_data/compliancedocument/ee7LrUZ83iIC/lsm/property_source/: segment-1755202829124330881.db
weaviate_data/compliancedocument/ee7LrUZ83iIC/main.hnsw.commitlog.d/: 1755202829
(+2 files in other folders)
